{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 31,
  "lineage": "39eed8d3-c025-b351-fede-e8beb0cdf9c9",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef9223f8-4fc7-4ede-9d2d-65e666aca619/resourceGroups/terraform-course/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "polandcentral",
            "name": "app-nsg",
            "resource_group_name": "terraform-course",
            "security_rule": [],
            "tags": {
              "Environment": "SIT",
              "Name": "app-nsg"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "app-nsg",
            "resource_group_name": "terraform-course",
            "subscription_id": "ef9223f8-4fc7-4ede-9d2d-65e666aca619"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef9223f8-4fc7-4ede-9d2d-65e666aca619/resourceGroups/terraform-course/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "polandcentral",
            "name": "web-nsg",
            "resource_group_name": "terraform-course",
            "security_rule": [],
            "tags": {
              "Environment": "SIT",
              "Name": "web-nsg"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "web-nsg",
            "resource_group_name": "terraform-course",
            "subscription_id": "ef9223f8-4fc7-4ede-9d2d-65e666aca619"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ef9223f8-4fc7-4ede-9d2d-65e666aca619/resourceGroups/terraform-course/providers/Microsoft.Network/networkSecurityGroups/app-nsg/securityRules/Allow-Internal",
            "name": "Allow-Internal",
            "network_security_group_name": "app-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terraform-course",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-Internal",
            "network_security_group_name": "app-nsg",
            "resource_group_name": "terraform-course",
            "subscription_id": "ef9223f8-4fc7-4ede-9d2d-65e666aca619"
          },
          "dependencies": [
            "azurerm_network_security_group.app",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ef9223f8-4fc7-4ede-9d2d-65e666aca619/resourceGroups/terraform-course/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/Allow-HTTP",
            "name": "Allow-HTTP",
            "network_security_group_name": "web-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terraform-course",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-HTTP",
            "network_security_group_name": "web-nsg",
            "resource_group_name": "terraform-course",
            "subscription_id": "ef9223f8-4fc7-4ede-9d2d-65e666aca619"
          },
          "dependencies": [
            "azurerm_network_security_group.web",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ef9223f8-4fc7-4ede-9d2d-65e666aca619/resourceGroups/terraform-course/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/Allow-HTTPS",
            "name": "Allow-HTTPS",
            "network_security_group_name": "web-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "terraform-course",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-HTTPS",
            "network_security_group_name": "web-nsg",
            "resource_group_name": "terraform-course",
            "subscription_id": "ef9223f8-4fc7-4ede-9d2d-65e666aca619"
          },
          "dependencies": [
            "azurerm_network_security_group.web",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ef9223f8-4fc7-4ede-9d2d-65e666aca619/resourceGroups/terraform-course/providers/Microsoft.Network/virtualNetworks/terraform-network/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terraform-course",
            "virtual_network_name": "terraform-network"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "app-subnet",
            "resource_group_name": "terraform-course",
            "subscription_id": "ef9223f8-4fc7-4ede-9d2d-65e666aca619",
            "virtual_network_name": "terraform-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ef9223f8-4fc7-4ede-9d2d-65e666aca619/resourceGroups/terraform-course/providers/Microsoft.Network/virtualNetworks/terraform-network/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terraform-course",
            "virtual_network_name": "terraform-network"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "web-subnet",
            "resource_group_name": "terraform-course",
            "subscription_id": "ef9223f8-4fc7-4ede-9d2d-65e666aca619",
            "virtual_network_name": "terraform-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef9223f8-4fc7-4ede-9d2d-65e666aca619/resourceGroups/terraform-course/providers/Microsoft.Network/virtualNetworks/terraform-network/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/ef9223f8-4fc7-4ede-9d2d-65e666aca619/resourceGroups/terraform-course/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/ef9223f8-4fc7-4ede-9d2d-65e666aca619/resourceGroups/terraform-course/providers/Microsoft.Network/virtualNetworks/terraform-network/subnets/app-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.app",
            "azurerm_resource_group.main",
            "azurerm_subnet.app",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef9223f8-4fc7-4ede-9d2d-65e666aca619/resourceGroups/terraform-course/providers/Microsoft.Network/virtualNetworks/terraform-network/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/ef9223f8-4fc7-4ede-9d2d-65e666aca619/resourceGroups/terraform-course/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/ef9223f8-4fc7-4ede-9d2d-65e666aca619/resourceGroups/terraform-course/providers/Microsoft.Network/virtualNetworks/terraform-network/subnets/web-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.web",
            "azurerm_resource_group.main",
            "azurerm_subnet.web",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "142b289d-fb2d-4374-ae41-1a1a7280b650",
            "id": "/subscriptions/ef9223f8-4fc7-4ede-9d2d-65e666aca619/resourceGroups/terraform-course/providers/Microsoft.Network/virtualNetworks/terraform-network",
            "location": "polandcentral",
            "name": "terraform-network",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "terraform-course",
            "tags": {
              "Author": "olek",
              "Environment": "SIT",
              "Managed_By": "Terraform",
              "Name": "terraform-course"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "terraform-network",
            "resource_group_name": "terraform-course",
            "subscription_id": "ef9223f8-4fc7-4ede-9d2d-65e666aca619"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}